Bug 100922 - After File > Properties for particular .docx file, Writer is no longer responsive
Summary: After File > Properties for particular .docx file, Writer is no longer respon...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium critical
Assignee: Szymon Kłos
URL:
Whiteboard: target:6.0.0
Keywords: perf
Depends on:
Blocks: DOCX File-Properties
  Show dependency treegraph
 
Reported: 2016-07-15 06:45 UTC by opensuse.lietuviu.kalba
Modified: 2020-05-04 02:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Testing DOCX document (114.83 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-07-15 06:45 UTC, opensuse.lietuviu.kalba
Details

Note You need to log in before you can comment on or make changes to this bug.
Description opensuse.lietuviu.kalba 2016-07-15 06:45:18 UTC
Created attachment 126216 [details]
Testing DOCX document

After File > Properties for particular file, program is no longer responsive.

Testing file originally created with LibreOffice, then edited in MS Office, then again in LibreOffice. It contains some bookmarks of Zotero plugin (see https://www.zotero.org/download/ and  https://www.zotero.org/support/word_processor_plugin_installation).
Comment 1 opensuse.lietuviu.kalba 2016-07-15 06:52:39 UTC
I can reproduce with  LibreOffice 5.0.4.2 in Linux
Comment 2 opensuse.lietuviu.kalba 2016-07-15 06:56:25 UTC
I can reproduce in LibreOffice 5.2.0.0.beta2 in Linux
Comment 3 opensuse.lietuviu.kalba 2016-07-15 07:01:10 UTC
I can reproduce in 4.3.3.2 (9bb7eadab57b6755b1265afa86e04bf45fbfc644)
Comment 4 opensuse.lietuviu.kalba 2016-07-15 07:08:11 UTC
In LibreOffice 3.4.2, after opening testing file and going File > Properties, do not freeze LibreOffice immediately, but LibreOffice becomes no longer responsive after clicking at "Custom Properties" tab.
Comment 5 opensuse.lietuviu.kalba 2016-07-15 07:18:52 UTC
In LibreOffice 3.3.0, after opening testing file and going File > Properties, do not freeze LibreOffice immediately, but LibreOffice becomes no longer responsive after clicking at "Custom Properties" tab.
Comment 6 Aron Budea 2016-07-16 04:45:50 UTC
Thanks for the bug report, and the detailed triaging. Confirmed in 5.3 master build.

Quick debugging shows it seems to be stuck in an endless loop of VCL resize calls, so changing component to graphics stack.
Adjusting severity to critical, since Writer hangs indefinitely.
Can't tell if it's related to Writer/Word interoperability/docx filter, the person who analyzes what happens in VCL should be able to set the keywords accordingly.
Comment 7 Vasily Melenchuk (CIB) 2017-09-06 09:48:44 UTC
This is not an endless loop, but extremely slow response of LibreOffice. For me it took ~ 10 minutes for dialog to appear.

Document contains not just couple bookmarks, but also almost 1300 custom properties. For each property there is at least 4 window elements are created on "Custom Properties" tab. Due to huge amount of windows they are created very slowly and it is also slow during processing events (show/hide, resize, focus, etc).
Comment 8 Commit Notification 2017-11-08 08:51:26 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=272a96da03522a82db4185e7858d05375f3ea95e

tdf#100922 Refactor Custom Properties page

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.