tdf#100922 Refactor Custom Properties page

This commit solves problems with big number of entries.
Window is loaded quickly and is responsive even with
over a thousand custom properties.

Change-Id: I4745c69aaff95661ca930e303ab65591e374a24d